# AdventOfCode

./: .gitignore
2022/common/src/: lib.rs
2022/day01/src/: main.rs
2022/day02/src/: main.rs
2022/day03/: Cargo.toml
2022/day03/src/: main.rs
2022/day04/: Cargo.toml
2022/day04/src/: main.rs
2022/day05/: Cargo.toml
2022/day05/src/: main.rs
2022/day06/: Cargo.toml
2022/day06/src/: main.rs
2022/day07/: Cargo.toml
2022/day07/src/: main.rs
2022/day08/src/: main.rs
2022/day09/src/: main.rs
2022/day10/: Cargo.toml
2022/day10/src/: main.rs
2022/day11/: Cargo.toml
2022/day11/src/: main.rs
2023/aoc/: Cargo.toml
2023/aoc/src/: lib.rs
2023/day01/: Cargo.toml
2023/day01/src/: main.rs
2023/day02/: Cargo.toml
2023/day02/src/: main.rs
2023/day03/: Cargo.toml
2023/day03/src/: main.rs
2023/day04/: Cargo.toml
2023/day04/src/: main.rs
2023/day05/: Cargo.toml
2023/day05/src/: main.rs
2023/day06/: Cargo.toml
2023/day06/src/: main.rs
2023/day07/: Cargo.toml
2023/day07/src/: main.rs
2023/day08/: Cargo.toml
2023/day08/src/: main.rs
2023/day09/: Cargo.toml
2023/day09/src/: main.rs
2023/day10/: Cargo.toml
2023/day10/src/: main.rs
2023/day11/: Cargo.toml
2023/day11/src/: main.rs
2023/day12/: Cargo.toml
2023/day12/src/: main.rs
2023/day13/: Cargo.toml
2023/day13/src/: main.rs
2023/day14/: Cargo.toml
2023/day14/src/: main.rs
2023/day15/: Cargo.toml
2023/day15/src/: main.rs
2023/day16/: Cargo.toml
2023/day16/benches/: benchmark.rs
2023/day16/src/: lib.rs  main.rs
2023/day17/: Cargo.toml
2023/day17/benches/: benchmark.rs
2023/day17/src/: lib.rs  main.rs
2023/day18/: Cargo.toml
2023/day18/benches/: benchmark.rs
2023/day18/src/: lib.rs  main.rs
2023/day19/: Cargo.toml
2023/day19/benches/: benchmark.rs
2023/day19/src/: lib.rs  main.rs
2023/day20/: Cargo.toml
2023/day20/src/: lib.rs  main.rs
2023/day21/: Cargo.toml
2023/day21/src/: lib.rs  main.rs
2024/: aoc2024.cabal  flake.nix
2024/aoc/: Aoc.hs
2024/day01/: Main.hs
2024/day02/: Main.hs
2024/day03/: Main.hs
2024/day04/: Main.hs
2024/day05/: Main.hs
2024/day06/: Main.hs
2024/day07/: Main.hs
2024/day08/: Main.hs
2024/day09/: Main.hs
2024/day10/: Main.hs
2024/day11/: Main.hs
2024/day12/: Main.hs
2024/day13/: Main.hs
2024/day14/: Main.hs
2024/day15/: Main.hs
