cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Martin Fink
maintainer:         martin@finkmartin.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable day01
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   day01, aoc
    default-language: GHC2021
    other-modules:    Aoc

