cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Martin Fink
maintainer:         martin@finkmartin.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable day01
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   day01, aoc
    default-language: GHC2021
    other-modules:    Aoc

executable day02
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   day02, aoc
    default-language: GHC2021
    other-modules:    Aoc

executable day03
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   day03, aoc
    default-language: GHC2021
    other-modules:    Aoc

executable day04
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1, universe-base >=1.1
    hs-source-dirs:   day04, aoc
    default-language: GHC2021
    other-modules:    Aoc

executable day05
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1, split, unordered-containers, containers
    hs-source-dirs:   day05, aoc
    default-language: GHC2021
    other-modules:    Aoc

executable day06
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1, matrix, unordered-containers, hashable
    hs-source-dirs:   day06, aoc
    default-language: GHC2021
    other-modules:    Aoc

executable day07
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1, matrix, unordered-containers, hashable
    hs-source-dirs:   day07, aoc
    default-language: GHC2021
    other-modules:    Aoc

